# ContainerRegistry

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  container_registry.hpp
ContainerRegistry/: CMakeLists.txt  version.hpp.in
ContainerRegistry/include/: container_registry.hpp
cmake/: CompilerFlags.cmake
main/: main.cpp
tests/: CMakeLists.txt  adapter_containers.cpp  common.hpp  container_registry_test.cpp  custom_compute_functions.cpp  custom_structures.cpp  deep_nested_combinations.cpp  edge_cases.cpp  empty_containers.cpp  map_containers.cpp  nested_structures.cpp  registry_behavior.cpp  type_detection.cpp  vector_containers.cpp
